[package]
name = "klang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
rand = "0.8"
rocket = "=0.5.0-rc.3"
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
rocket_contrib = { version = "0.4.11", features = ["json"] }
