[package]
name = "playgroundkl"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rocket = "=0.5.0-rc.3"
shuttle-runtime = "0.18.0"
shuttle-rocket = "0.18.0"
tokio = "1.28.2"